<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto" >
    
    <!--<item android:id="@+id/action_share"-->
        <!--android:title="@string/Export"-->
           <!--app:showAsAction="ifRoom"-->
           <!--app:actionProviderClass="android.support.v7.widget.ShareActionProvider" />-->
    
    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/MagnifierText"
          app:showAsAction="ifRoom"/>
     
    <item android:id="@+id/action_edit"
          android:icon="@drawable/ic_action_edit"
          android:title="@string/Edit"
          app:showAsAction="ifRoom" />
    
     <item android:id="@+id/action_new"
          android:icon="@drawable/ic_action_new"
          android:title="@string/Add"
          app:showAsAction="ifRoom" />
     
    <item android:id="@+id/action_download"
          android:icon="@drawable/ic_action_download"
          android:title="@string/ImportFromDictCC"
          app:showAsAction="ifRoom" />
    
    <item android:id="@+id/action_import"
          android:icon="@drawable/ic_action_import_export"
          android:title="@string/Import"
          app:showAsAction="ifRoom"/>
    
    <item android:id="@+id/action_export"
          android:icon="@drawable/ic_action_import_export"
          android:title="@string/Export"
          app:showAsAction="ifRoom"/>
    
    <item android:id="@+id/action_export_all"
          android:icon="@drawable/ic_action_import_export"
          android:title="@string/ExportAll"
          app:showAsAction="ifRoom"/>
    
    <item android:id="@+id/action_delete"
          android:icon="@drawable/ic_action_discard"
          android:title="@string/Delete"
          app:showAsAction="ifRoom" />
    
    <item android:id="@+id/action_delete_all"
          android:icon="@drawable/ic_action_discard"
          android:title="@string/DeleteAll"
          app:showAsAction="ifRoom" />
    
    <item android:id="@+id/action_settings"
          android:title="@string/Prefs"/>
    
</menu>